--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -1,228 +1,240 @@
 <!--
-.. title: PyCon Thailand 2019
-.. slug: index
-.. date: 2019-02-17 12:20:00 UTC+07:00
-.. tags:
-.. category:
-.. link:
-.. description:
-.. type: text
-.. template: homepage.tmpl
+  .. title: PyCon Thailand 2019
+  .. slug: index
+  .. date: 2019-02-17 12:20:00 UTC+07:00
+  .. tags:
+  .. category:
+  .. link:
+  .. description:
+  .. type: text
+  .. template: homepage.tmpl
 -->
 
 <!-- frontpage -->
 <div class="section first">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-8 offset-sm-2">
-                <div class="main-title">
-                    PyconThailand
-                    <p class="place">
-                        BANGKOK
-                    </p>
-                    <p class="when">
-                        JUNE 15-16 2019
-                    </p>
-                    <p class="edition">
-                        2ND EDITION
-                    </p>
-                </div>
-                <img alt="PyCon 2019 naga logo" class="img-responsive" src="/logo2019.png">
-                <p class="invitation">
-                    Pycon is back! Join us for a two day conference for developers in the heart of Bangkok.
-                </p>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="main-title">
+        PyconThailand
+        <p class="place">BANGKOK</p>
+        <p class="when">JUNE 15-16 2019</p>
+        <p class="edition">2ND EDITION</p>
+      </div>
+      <img
+        alt="PyCon 2019 naga logo"
+        class="img-responsive"
+        src="/logo2019.png"
+      />
+      <p class="invitation">
+        Pycon is back! Join us for a two day conference for developers in the
+        heart of Bangkok.
+      </p>
     </div>
+  </div>
 </div>
 
 <!-- news -->
 <div class="section news-section">
-    <div class="container">
-        <div class="row">
-            <div class="news col-sm-12">
-                <div class="col-sm-12">
-                    <h1 class="news-title red-followline">News</h1>
-                </div>
-                <div class="col-sm-6 offset-sm-3 schedule">
-                    {{% post-list stop=3 %}}
-                    {{% /post-list %}}
-                </div>
-            </div>
-            <div class="countdown col-sm-12">
-                <div class="col-sm-12">
-                    <h1 class="countdown-title red-prepostline">
-                        PYCON THAILAND STARTS IN
-                    </h1>
-                    <h1 class="countdown-timer" id="countdown-timer">
-                        100 days 23 hrs 30 min 10 sec
-                    </h1>
-                    <span class="btn-primary btn-lg get-ticket-btn">
-                    {{% doc %}}Buy tickets{{% /doc %}}
-                    </span>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="news col-sm-12">
+        <div class="col-sm-12">
+          <h1 class="news-title red-followline">News</h1>
         </div>
+        <div class="col-sm-6 offset-sm-3 schedule">
+          {{% post-list stop=3 %}} {{% /post-list %}}
+        </div>
+      </div>
+      <div class="countdown col-sm-12">
+        <div class="col-sm-12">
+          <h1 class="countdown-title red-prepostline">
+            PYCON THAILAND STARTS IN
+          </h1>
+          <h1 class="countdown-timer" id="countdown-timer">
+            100 days 23 hrs 30 min 10 sec
+          </h1>
+          <span class="btn-primary btn-lg get-ticket-btn">
+            {{% doc %}}Buy tickets{{% /doc %}}
+          </span>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
 
 <!-- keynote -->
 <div class="section second">
-    <div class="container">
-        <div class="keynote row">
-            <div class="col-sm-12">
-                <h2 class="keynote-title red-followline">Keynote Speakers</h2>
+  <div class="container">
+    <div class="keynote row">
+      <div class="col-sm-12">
+        <h2 class="keynote-title red-followline">Keynote Speakers</h2>
+      </div>
+      <div class="col-sm-12">
+        <section class="row speaker">
+          <p>Coming soon</p>
+          <!--
+            TODO
+            <div class="col-sm-3">
+                <img class="img-responsive" src="wes-2017-01-12-small.png">
+                <p class="name">
+                    Wes Mckinney
+                </p>
+                <p class="org">
+                    PANDAS
+                </p>
+                <p class="website">
+                    <a href="#">http://wesmckinney.com</a>
+                </p>
             </div>
-            <div class="col-sm-12">
-                <section class="row speaker">
-                    <p>Coming soon</p>
-                    <!-- TODO
-                    <div class="col-sm-3">
-                        <img class="img-responsive" src="wes-2017-01-12-small.png">
-                        <p class="name">
-                            Wes Mckinney
-                        </p>
-                        <p class="org">
-                            PANDAS
-                        </p>
-                        <p class="website">
-                            <a href="#">http://wesmckinney.com</a>
-                        </p>
-                    </div>
-                    <article class="col-sm-8">
-                        <p class="content">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
-                        </p>
-                    </article>
-                    -->
-                </section>
-                <!-- TODO
-                <section class="row speaker">
-                    <div class="col-sm-3">
-                        <img class="img-responsive" src="tiwa-york.jpeg">
-                        <p class="name">
-                            Wes Mckinney
-                        </p>
-                        <p class="org">
-                            KAIDEE<br/>headcoach
-                        </p>
-                        <p class="website">
-                            <a href="#">http://wesmckinney.com</a>
-                        </p>
-                    </div>
-                    <article class="col-sm-8">
-                        <p class="content">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
-                        </p>
-                    </article>
-                </section>
-                -->
-            </div>
-        </div>
+            <article class="col-sm-8">
+                <p class="content">
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+                </p>
+            </article>
+          -->
+        </section>
+        <!--
+          TODO
+          <section class="row speaker">
+              <div class="col-sm-3">
+                  <img class="img-responsive" src="tiwa-york.jpeg">
+                  <p class="name">
+                      Wes Mckinney
+                  </p>
+                  <p class="org">
+                      KAIDEE<br/>headcoach
+                  </p>
+                  <p class="website">
+                      <a href="#">http://wesmckinney.com</a>
+                  </p>
+              </div>
+              <article class="col-sm-8">
+                  <p class="content">
+                      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+                  </p>
+              </article>
+          </section>
+        -->
+      </div>
     </div>
+  </div>
 </div>
 
 <!-- sponsor -->
 <section class="section sponsor-section fp-auto-height">
-    <div class="container">
-        <div class="row">
-            <section class="welcome-submission col-sm-12">
-                <div class="col-sm-12">
-                    <h1 class="welcome-submission-title red-prepostline">WE WELCOME YOUR SUBMISSION!</h1>
-                    <p class="welcome-submission-text">Join our keynote speakers for the 2nd edition of Pycon Thailand. We're open to submission for papers now!</p>
-                </div>
-                <span href="#" class="btn-primary btn-lg get-ticket-btn">
-                    {{% doc %}}Sponsorship{{% /doc %}}
-                </span>
-            </section>
-            <!-- TODO
-            <section class="sponsor col-sm-12">
-                <h2 class="sponsor-title">GOLD SPONSOR</h2>
-                <div class="row">
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                </div>
-                <h2 class="sponsor-title">SILVER SPONSOR</h2>
-                <div class="row">
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                    <div class="col-sm-4 rounded">
-                        <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
-                    </div>
-                </div>
-            </section>
-            -->
+  <div class="container">
+    <div class="row">
+      <section class="welcome-submission col-sm-12">
+        <div class="col-sm-12">
+          <h1 class="welcome-submission-title red-prepostline">
+            WE WELCOME YOUR SUBMISSION!
+          </h1>
+          <p class="welcome-submission-text">
+            Join our keynote speakers for the 2nd edition of Pycon Thailand.
+            We're open to submission for papers now!
+          </p>
         </div>
-    </div>
-    <!-- footer -->
-    <footer>
-        <div class="container">
+        <span href="#" class="btn-primary btn-lg get-ticket-btn">
+          {{% doc %}}Sponsorship{{% /doc %}}
+        </span>
+      </section>
+      <!--
+        TODO
+        <section class="sponsor col-sm-12">
+            <h2 class="sponsor-title">GOLD SPONSOR</h2>
             <div class="row">
-                <div class="col-md-5 about">
-                    <p>About</p>
-                    <p>Pycon Thailand is a conference about<br>the programming language Python.<br>
-                    It is a community effort driven by <br> the members of the Python Community<br>in Bangkok
-                    </p>
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <i class="fa-fw fa fa-facebook"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-fw fa fa-twitter"></i>
-                            </a>
-                        </li>
-                    </ul>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
                 </div>
-                <div class="col-md-2">
-                    <img alt="PyCon 2019 naga logo" class="img-responsive" src="/logo2019.png">
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
                 </div>
-                <div class="col-md-5 when-where">
-                    <p>June 16 - 17 2018</p>
-                    <p>Knowledge Exchange Center - KX<br>10/1 Krung Thonburi Road<br> Khwaeng Bang Lamphu Lang<br>THon Buri Bangkok 10600</p>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
                 </div>
             </div>
+            <h2 class="sponsor-title">SILVER SPONSOR</h2>
+            <div class="row">
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+                <div class="col-sm-4 rounded">
+                    <a href="#"><img class="img-responsive" src="newlogic-logo.png"></a>
+                </div>
+            </div>
+        </section>
+      -->
+    </div>
+  </div>
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 about">
+          <p>About</p>
+          <p>
+            Pycon Thailand is a conference about<br />the programming language
+            Python.<br />
+            It is a community effort driven by <br />
+            the members of the Python Community<br />in Bangkok
+          </p>
+          <ul>
+            <li>
+              <a href="#"> <i class="fa-fw fa fa-facebook"></i> </a>
+            </li>
+            <li>
+              <a href="#"> <i class="fa-fw fa fa-twitter"></i> </a>
+            </li>
+          </ul>
         </div>
-    </footer>
+        <div class="col-md-2">
+          <img
+            alt="PyCon 2019 naga logo"
+            class="img-responsive"
+            src="/logo2019.png"
+          />
+        </div>
+        <div class="col-md-5 when-where">
+          <p>June 16 - 17 2018</p>
+          <p>
+            Knowledge Exchange Center - KX<br />10/1 Krung Thonburi Road<br />
+            Khwaeng Bang Lamphu Lang<br />THon Buri Bangkok 10600
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </section>
 
 <script>
-    // for countdown timer
-    var targetDate = new Date("June 15, 2019 8:00:00").getTime();
+  // for countdown timer
+  var targetDate = new Date("June 15, 2019 8:00:00").getTime();
 
-    var counter = setInterval(() => {
-        var now = new Date().getTime();
-        var diff = targetDate - now;
+  var counter = setInterval(() => {
+    var now = new Date().getTime();
+    var diff = targetDate - now;
 
-        var d = Math.floor(diff / (1000 * 60 * 60 * 24));
-        var h = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        var m = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-        var s = Math.floor((diff % (1000 * 60)) / 1000);
+    var d = Math.floor(diff / (1000 * 60 * 60 * 24));
+    var h = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var m = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+    var s = Math.floor((diff % (1000 * 60)) / 1000);
 
-        document.getElementById("countdown-timer").innerHTML = `${d} days ${h} hrs ${m} min ${s} sec`;
+    document.getElementById(
+      "countdown-timer"
+    ).innerHTML = `${d} days ${h} hrs ${m} min ${s} sec`;
 
-        if (diff < 0) {
-            clearInterval(counter);
-            document.getElementById("countdown-timer").innerHTML = "NOW!";
-        }
-    }, 1000);
+    if (diff < 0) {
+      clearInterval(counter);
+      document.getElementById("countdown-timer").innerHTML = "NOW!";
+    }
+  }, 1000);
 </script>
