Add palm tree image

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -29,6 +29,7 @@
         Pycon is back! Join us for a two day conference for developers in the
         heart of Bangkok.
       </p>
+      <img alt="Palm Trees" class="palm-trees" src="/palm-trees.png" />
     </div>
   </div>
 </div>
