Make only 1 h1 element per page

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="main-title">
-        PyconThailand
+        <h1>Pycon Thailand</h1>
         <p class="place">BANGKOK</p>
         <p class="when">JUNE 15-16 2019</p>
         <p class="edition">2ND EDITION</p>
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="news col-sm-12">
         <div class="col-sm-12">
-          <h1 class="news-title red-followline">News</h1>
+          <h2 class="news-title red-followline">News</h2>
         </div>
         <div class="col-sm-6 offset-sm-3 schedule">
           {{% post-list stop=3 %}} {{% /post-list %}}
@@ -48,12 +48,12 @@
       </div>
       <div class="countdown col-sm-12">
         <div class="col-sm-12">
-          <h1 class="countdown-title red-prepostline">
+          <h2 class="countdown-title red-prepostline">
             PYCON THAILAND STARTS IN
-          </h1>
-          <h1 class="countdown-timer" id="countdown-timer">
+          </h2>
+          <h2 class="countdown-timer" id="countdown-timer">
             100 days 23 hrs 30 min 10 sec
-          </h1>
+          </h2>
           <span class="btn-primary btn-lg get-ticket-btn">
             {{% doc %}}Buy tickets{{% /doc %}}
           </span>
@@ -127,9 +127,9 @@
     <div class="row">
       <section class="welcome-submission col-sm-12">
         <div class="col-sm-12">
-          <h1 class="welcome-submission-title red-prepostline">
+          <h2 class="welcome-submission-title red-prepostline">
             WE WELCOME YOUR SUBMISSION!
-          </h1>
+          </h2>
           <p class="welcome-submission-text">
             Join our keynote speakers for the 2nd edition of Pycon Thailand.
             We're open to submission for papers now!
