Fixes top section to follow spec

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -11,25 +11,36 @@
 -->
 
 <!-- frontpage -->
-<div class="section first">
+<div class="section first pt-10">
   <div class="container">
-    <div class="row">
-      <div class="main-title">
-        <h1>Pycon Thailand</h1>
-        <p class="place">BANGKOK</p>
-        <p class="when">JUNE 15-16 2019</p>
-        <p class="edition">2ND EDITION</p>
+    <div class="">
+      <div class="mx-auto my-10 max-w-md">
+        <div class="flex justify-between w-full text-lg">
+          <p class="when">JUNE 15-16 2019</p>
+          <p class="edition">2ND EDITION</p>
+        </div>
+
+        <div
+          class="flex flex-wrap justify-between w-full font-bold text-3xl lg:text-5xl"
+        >
+          <h1>Pycon</h1>
+          <h1>Thailand</h1>
+        </div>
+        <p class="text-lg text-right">BANGKOK</p>
       </div>
-      <img
-        alt="PyCon 2019 naga logo"
-        class="img-responsive"
-        src="/logo2019.png"
-      />
-      <p class="invitation">
-        Pycon is back! Join us for a two day conference for developers in the
-        heart of Bangkok.
-      </p>
-      <img alt="Palm Trees" class="palm-trees" src="/palm-trees.png" />
+
+      <div class="mx-auto mt-10 max-w-md relative">
+        <p class="invitation">
+          Pycon is back! Join us for a two day <br />conference for developers
+          in the <br />heart of Bangkok.
+        </p>
+        <img alt="PyCon 2019 naga logo" class="sun-logo" src="/logo2019.png" />
+        <img
+          alt="Palm Trees"
+          class="palm-trees relative pin-b"
+          src="/palm-trees.png"
+        />
+      </div>
     </div>
   </div>
 </div>
