Fix button styles

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -137,9 +137,9 @@
 <section class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
-      <section class="welcome-submission col-sm-12">
+      <section class="welcome-submission">
         <div class="col-sm-12">
-          <h2 class="welcome-submission-title red-prepostline">
+          <h2 class="welcome-submission-title red-prepostline font-bold">
             WE WELCOME YOUR SUBMISSION!
           </h2>
           <p class="welcome-submission-text">
