--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -59,7 +59,7 @@
         {{% post-list stop=3 %}} {{% /post-list %}}
       </div>
     </div>
-    <div class="countdown col-sm-12">
+    <div class="countdown col-sm-12 my-8">
       <div class="col-sm-12">
         <h2 class="countdown-title red-prepostline font-bold">
           PYCON THAILAND STARTS IN
@@ -137,12 +137,12 @@
 <section class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
-      <section class="welcome-submission">
+      <section class="welcome-submission w-full">
         <div class="col-sm-12">
           <h2 class="welcome-submission-title red-prepostline font-bold">
             WE WELCOME YOUR SUBMISSION!
           </h2>
-          <p class="welcome-submission-text">
+          <p class="welcome-submission-text text-sm">
             Join our keynote speakers for the 2nd edition of Pycon Thailand.
             We're open to submission for papers now!
           </p>
