Fix about section

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -76,24 +76,20 @@
 </div>
 
 <!-- keynote -->
-<div class="section second">
-  <div class="container">
-    <div class="keynote row">
-      <div class="col-sm-12">
-        <h2 class="keynote-title red-followline">Keynote Speakers</h2>
-      </div>
-      <div class="col-sm-12">
+<div class="section second min-h-screen">
+  <div class="keynote mx-8">
+    <h2 class="keynote-title red-followline">Keynote Speakers</h2>
+    <div class="col-sm-12">
+      <!--
+        TODO
         <section class="row speaker">
-          <p>Coming soon</p>
-          <!--
-            TODO
             <div class="col-sm-3">
-                <img class="img-responsive" src="wes-2017-01-12-small.png">
+                <img class="img-responsive" src="tiwa-york.jpeg">
                 <p class="name">
                     Wes Mckinney
                 </p>
                 <p class="org">
-                    PANDAS
+                    KAIDEE<br/>headcoach
                 </p>
                 <p class="website">
                     <a href="#">http://wesmckinney.com</a>
@@ -169,8 +165,8 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-5 about">
-          <p>About</p>
+        <div class="about w-full mx-4">
+          <h3 class="font-bold uppercase">About</h3>
           <p>
             Pycon Thailand is a conference about<br />the programming language
             Python.<br />
@@ -186,20 +182,18 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-2">
-          <img
-            alt="PyCon 2019 naga logo"
-            class="img-responsive"
-            src="/logo2019.png"
-          />
-        </div>
-        <div class="col-md-5 when-where">
-          <p>June 16 - 17 2018</p>
-          <p>
-            Knowledge Exchange Center - KX<br />10/1 Krung Thonburi Road<br />
-            Khwaeng Bang Lamphu Lang<br />THon Buri Bangkok 10600
-          </p>
-        </div>
+        <img
+          alt="PyCon 2019 naga logo"
+          class="max-w-xs mx-auto"
+          src="/logo2019.png"
+        />
+      </div>
+      <div class="col-md-5 when-where">
+        <p>June 16 - 17 2018</p>
+        <p>
+          Knowledge Exchange Center - KX<br />10/1 Krung Thonburi Road<br />
+          Khwaeng Bang Lamphu Lang<br />THon Buri Bangkok 10600
+        </p>
       </div>
     </div>
   </footer>
