Make TH frontpage match EN frontpage

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -11,26 +11,35 @@
 -->
 
 <!-- frontpage -->
-<div class="section first">
+<div class="section first pt-10">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-8 offset-sm-2">
-                <div class="main-title">
-                    PyconThailand
-                    <p class="place">
-                        กรุงเทพ
-                    </p>
-                    <p class="when">
-                        15-16 มิถุนายน 2562
-                    </p>
-                    <p class="edition">
-                        ครั้งที่ 2
-                    </p>
+        <div class="">
+            <div class="mx-auto my-10 max-w-md">
+                <div class="flex justify-between w-full text-lg">
+                    <p class="when">15-16 มิถุนายน 2562</p>
+                    <p class="edition">ครั้งที่ 2</p>
                 </div>
-                <img alt="PyCon 2019 naga logo" class="img-responsive" src="/logo2019.png">
+
+                <div
+                    class="flex flex-wrap justify-between w-full font-bold text-3xl lg:text-5xl"
+                >
+                    <h1>Pycon</h1>
+                    <h1>Thailand</h1>
+                </div>
+                <p class="text-lg text-right">กรุงเทพ</p>
+            </div>
+
+            <div class="mx-auto mt-10 max-w-md relative">
                 <p class="invitation">
-                    Pycon is back! Join us for a two day conference for developers in the heart of Bangkok.
+                    Pycon is back! Join us for a two day <br />conference for developers
+                    in the <br />heart of Bangkok.
                 </p>
+                <img alt="PyCon 2019 naga logo" class="sun-logo" src="/logo2019.png" />
+                <img
+                    alt="Palm Trees"
+                    class="palm-trees relative pin-b"
+                    src="/palm-trees.png"
+                />
             </div>
         </div>
     </div>
