Fix too-tall naga logo height on Chrome

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -187,7 +187,7 @@
         </div>
         <img
           alt="PyCon 2019 naga logo"
-          class="max-w-xs mx-auto"
+          class="max-w-xs max-h-xs mx-auto"
           src="/logo2019.png"
         />
       </div>
