Fix main Pycon Thailand font

--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div
-                    class="flex flex-wrap justify-between w-full font-bold text-3xl lg:text-5xl"
+                    class="flex flex-wrap justify-between w-full text-3xl lg:text-5xl pycon-thailand"
                 >
                     <h1>Pycon</h1>
                     <h1>Thailand</h1>
