Fix header spacing

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -15,18 +15,16 @@
   <div class="container">
     <div class="">
       <div class="mx-auto my-10 max-w-md">
-        <div class="flex justify-between w-full text-lg">
+        <div class="flex justify-between w-full">
           <p class="when">JUNE 15-16 2019</p>
           <p class="edition">2ND EDITION</p>
         </div>
 
-        <div
-          class="flex flex-wrap justify-between w-full text-3xl lg:text-5xl pycon-thailand"
-        >
+        <div class="flex flex-wrap justify-between w-full pycon-thailand">
           <h1>Pycon</h1>
           <h1>Thailand</h1>
         </div>
-        <p class="text-lg text-right">BANGKOK</p>
+        <p class="text-right bangkok">BANGKOK</p>
       </div>
 
       <div class="mx-auto mt-10 max-w-md relative">
