--- a/site/pages/pycon-thailand.th.html
+++ b/site/pages/pycon-thailand.th.html
@@ -15,18 +15,18 @@
     <div class="container">
         <div class="">
             <div class="mx-auto my-10 max-w-md">
-                <div class="flex justify-between w-full text-lg">
+                <div class="flex justify-between w-full">
                     <p class="when">15-16 มิถุนายน 2562</p>
                     <p class="edition">ครั้งที่ 2</p>
                 </div>
 
                 <div
-                    class="flex flex-wrap justify-between w-full text-3xl lg:text-5xl pycon-thailand"
+                    class="flex flex-wrap justify-between w-full pycon-thailand"
                 >
                     <h1>Pycon</h1>
                     <h1>Thailand</h1>
                 </div>
-                <p class="text-lg text-right">กรุงเทพ</p>
+                <p class="text-right">กรุงเทพ</p>
             </div>
 
             <div class="mx-auto mt-10 max-w-md relative">
