Fix frontpage splash spacing and fonts

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -11,35 +11,31 @@
 -->
 
 <!-- frontpage -->
-<div class="section first pt-10">
-  <div class="container">
-    <div class="">
-      <div class="mx-auto my-10 max-w-md">
-        <div class="flex justify-between w-full">
-          <p class="when">JUNE 15-16 2019</p>
-          <p class="edition">2ND EDITION</p>
-        </div>
-
-        <div class="flex flex-wrap justify-between w-full pycon-thailand">
-          <h1>Pycon</h1>
-          <h1>Thailand</h1>
-        </div>
-        <p class="text-right bangkok">BANGKOK</p>
-      </div>
-
-      <div class="mx-auto mt-10 max-w-md relative">
-        <p class="invitation">
-          Pycon is back! Join us for a two day <br />conference for developers
-          in the <br />heart of Bangkok.
-        </p>
-        <img alt="PyCon 2019 naga logo" class="sun-logo" src="/logo2019.png" />
-        <img
-          alt="Palm Trees"
-          class="palm-trees relative pin-b"
-          src="/palm-trees.png"
-        />
-      </div>
+<div class="section first pt-10 min-h-screen flex flex-column items-center">
+  <div class="my-10 w-full md:w-1/2">
+    <div class="flex justify-between px-2">
+      <p class="when">JUNE 15-16 2019</p>
+      <p class="edition">2ND EDITION</p>
     </div>
+
+    <div class="flex flex-wrap justify-between w-full px-1 pycon-thailand">
+      <h1>Pycon</h1>
+      <h1>Thailand</h1>
+    </div>
+    <p class="text-right bangkok px-2">BANGKOK</p>
+  </div>
+
+  <div class="mx-auto mt-auto max-w-md">
+    <p class="invitation">
+      Pycon is back! Join us for a two day <br />conference for developers in
+      the <br />heart of Bangkok.
+    </p>
+    <img alt="PyCon 2019 naga logo" class="sun-logo" src="/logo2019.png" />
+    <img
+      alt="Palm Trees"
+      class="palm-trees relative pin-b"
+      src="/palm-trees.png"
+    />
   </div>
 </div>
 
