--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -57,9 +57,46 @@
       <h2 class="countdown-title red-prepostline font-bold">
         PYCON THAILAND STARTS IN
       </h2>
-      <h2 class="countdown-timer" id="countdown-timer">
-        100 days 23 hrs 30 min 10 sec
-      </h2>
+      <div class="flip-clock my-8">
+        <div class="flip-clock__unit">
+          <span class="flip-clock__piece">
+            <span class="flip-clock__card flip-card">
+              <b class="flip-card__top" id="d"></b>
+              <b class="flip-card__bottom" id="d2"></b>
+            </span>
+          </span>
+          <span class="flip-clock__slot">Days</span>
+        </div>
+
+        <div class="flip-clock__unit">
+          <span class="flip-clock__piece">
+            <span class="flip-clock__card flip-card">
+              <b class="flip-card__top" id="h"></b>
+              <b class="flip-card__bottom" id="h2"></b>
+            </span>
+          </span>
+          <span class="flip-clock__slot">Hours</span>
+        </div>
+        <div class="flip-clock__unit">
+          <span class="flip-clock__piece">
+            <span class="flip-clock__card flip-card">
+              <b class="flip-card__top" id="m"></b>
+              <b class="flip-card__bottom" id="m2"></b>
+            </span>
+          </span>
+          <span class="flip-clock__slot">Minutes</span>
+        </div>
+        <div class="flip-clock__unit">
+          <span class="flip-clock__piece">
+            <span class="flip-clock__card flip-card">
+              <b class="flip-card__top" id="s"></b>
+              <b class="flip-card__bottom" id="s2"></b>
+            </span>
+          </span>
+          <span class="flip-clock__slot">Seconds</span>
+        </div>
+      </div>
+      <h2 class="countdown-timer" id="countdown-timer"></h2>
       <span class="btn-primary btn-lg get-ticket-btn">
         {{% doc %}}Buy tickets{{% /doc %}}
       </span>
@@ -168,13 +205,21 @@
     var m = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
     var s = Math.floor((diff % (1000 * 60)) / 1000);
 
-    document.getElementById(
-      "countdown-timer"
-    ).innerHTML = `${d} days ${h} hrs ${m} min ${s} sec`;
+    document.getElementById("d").innerHTML = `${d}`;
+    document.getElementById("h").innerHTML = `${h}`;
+    document.getElementById("m").innerHTML = `${m}`;
+    document.getElementById("s").innerHTML = `${s}`;
+    document.getElementById("d2").dataset.value = `${d}`;
+    document.getElementById("h2").dataset.value = `${h}`;
+    document.getElementById("m2").dataset.value = `${m}`;
+    document.getElementById("s2").dataset.value = `${s}`;
 
     if (diff < 0) {
       clearInterval(counter);
       document.getElementById("countdown-timer").innerHTML = "NOW!";
+      document.querySelector(".flip-clock").remove();
+      document.querySelector(".countdown-title").textContent =
+        "PYCON THAILAND STARTS";
     }
   }, 1000);
 </script>
