Fix coconut logo header

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -11,7 +11,7 @@
 -->
 
 <!-- frontpage -->
-<div class="section first pt-10 min-h-screen flex flex-column items-center">
+<div class="section first pt-10 flex flex-column items-center">
   <div class="my-10 w-full md:w-1/2">
     <div class="flex justify-between px-2">
       <p class="when">JUNE 15-16 2019</p>
@@ -30,11 +30,10 @@
       Pycon is back! Join us for a two day <br />conference for developers in
       the <br />heart of Bangkok.
     </p>
-    <img alt="PyCon 2019 naga logo" class="sun-logo" src="/logo2019.png" />
     <img
-      alt="Palm Trees"
-      class="palm-trees relative pin-b"
-      src="/palm-trees.png"
+      class="palm-trees-logo"
+      src="/coconut-tree-with-logo.png"
+      alt="coconut tree logo"
     />
   </div>
 </div>
