fix papercall link (#161)
* fix papercall link

* shorter button

--- a/site/pages/pycon-thailand.en.html
+++ b/site/pages/pycon-thailand.en.html
@@ -134,7 +134,7 @@
   </div>
 </div>
 
-<!-- sponsor -->
+
 <section class="section sponsor-section fp-auto-height">
   <div class="container">
     <div class="row">
@@ -146,6 +146,28 @@
           <p class="welcome-submission-text text-sm">
             Join our keynote speakers for the 2nd edition of Pycon Thailand.
             We're open to submission for papers now!
+          </p>
+        </div>
+        <span href="https://www.papercall.io/pyconth19" class="btn-primary btn-lg get-ticket-btn">
+          <a href="https://www.papercall.io/pyconth19">Submit Talk</a>
+        </span>
+      </section>
+    </div>
+  </div>
+</section>
+
+
+<!-- sponsor -->
+<section class="section sponsor-section fp-auto-height">
+  <div class="container">
+    <div class="row">
+      <section class="welcome-submission w-full">
+        <div class="col-sm-12">
+          <h2 class="welcome-submission-title red-prepostline font-bold">
+            SPONSORSHIP IS OPEN
+          </h2>
+          <p class="welcome-submission-text text-sm">
+            Limited sponsorship places available now
           </p>
         </div>
         <span href="#" class="btn-primary btn-lg get-ticket-btn">
